--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/rxjava-1.0.12.jar')
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'io.reactivex:rxjava:1.0.10'
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile files('libs/rxandroid-0.25.0.jar')
+    //    compile 'io.reactivex:rxandroid:0.25.0'
 }
